clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00162.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00162.c" (c, x86_64-unknown-linux-gnu)
fn fooc(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %4 = alloca s32i*, "x", align 8
        store %arg0, %4
        %5 = const 42 : s32i
        %6 = const 3 : s64i
        %7 = load %4 : s32i*, align 8, volatile
        %8 = ptr_stride %7, %6 : s32i*
        store %5, %8, align 4
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
