clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00163.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00163.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[8] = ConstArray { ty: Array { element_type: Named("s8i"), size: 8 }, elts: Str("a = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global bolshevic : rec_ziggy = Zero { ty: Named("rec_ziggy") } [external, default, align 4, dso_local]
global .str.1 : s8i[18] = ConstArray { ty: Array { element_type: Named("s8i"), size: 18 }, elts: Str("bolshevic.a = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[18] = ConstArray { ty: Array { element_type: Named("s8i"), size: 18 }, elts: Str("bolshevic.b = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[18] = ConstArray { ty: Array { element_type: Named("s8i"), size: 18 }, elts: Str("bolshevic.c = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[14] = ConstArray { ty: Array { element_type: Named("s8i"), size: 14 }, elts: Str("tsar->a = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[14] = ConstArray { ty: Array { element_type: Named("s8i"), size: 14 }, elts: Str("tsar->b = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[14] = ConstArray { ty: Array { element_type: Named("s8i"), size: 14 }, elts: Str("tsar->c = %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = alloca s32i*, "b", align 8
        %3 = alloca s32i, "c", align 4
        %4 = alloca rec_ziggy*, "tsar", align 8
        %5 = const 0 : s32i
        store %5, %0
        %6 = const 42 : s32i
        store %6, %1, align 4
        store %1, %2, align 8
        %7 = get_global @printf : (s8i*, ...) -> s32i*
        %8 = get_global @.str : s8i[8]*
        %9 = cast(array_to_ptrdecay) %8 : s8i*
        %10 = load %2 : s32i*, align 8
        %11 = load %10 : s32i, align 4
        %12 = call @printf(%9, %11) : s32i [all]
        %13 = const 12 : s32i
        %14 = get_global @bolshevic : rec_ziggy*
        get_member
        store %13, %15, align 4
        %16 = const 34 : s32i
        %17 = get_global @bolshevic : rec_ziggy*
        get_member
        store %16, %18, align 4
        %19 = const 56 : s32i
        %20 = get_global @bolshevic : rec_ziggy*
        get_member
        store %19, %21, align 4
        %22 = get_global @printf : (s8i*, ...) -> s32i*
        %23 = get_global @.str.1 : s8i[18]*
        %24 = cast(array_to_ptrdecay) %23 : s8i*
        %25 = get_global @bolshevic : rec_ziggy*
        get_member
        %27 = load %26 : s32i, align 4
        %28 = call @printf(%24, %27) : s32i [all]
        %29 = get_global @printf : (s8i*, ...) -> s32i*
        %30 = get_global @.str.2 : s8i[18]*
        %31 = cast(array_to_ptrdecay) %30 : s8i*
        %32 = get_global @bolshevic : rec_ziggy*
        get_member
        %34 = load %33 : s32i, align 4
        %35 = call @printf(%31, %34) : s32i [all]
        %36 = get_global @printf : (s8i*, ...) -> s32i*
        %37 = get_global @.str.3 : s8i[18]*
        %38 = cast(array_to_ptrdecay) %37 : s8i*
        %39 = get_global @bolshevic : rec_ziggy*
        get_member
        %41 = load %40 : s32i, align 4
        %42 = call @printf(%38, %41) : s32i [all]
        %43 = get_global @bolshevic : rec_ziggy*
        store %43, %4, align 8
        %44 = get_global @printf : (s8i*, ...) -> s32i*
        %45 = get_global @.str.4 : s8i[14]*
        %46 = cast(array_to_ptrdecay) %45 : s8i*
        %47 = load %4 : rec_ziggy*, align 8
        get_member
        %49 = load %48 : s32i, align 4
        %50 = call @printf(%46, %49) : s32i [all]
        %51 = get_global @printf : (s8i*, ...) -> s32i*
        %52 = get_global @.str.5 : s8i[14]*
        %53 = cast(array_to_ptrdecay) %52 : s8i*
        %54 = load %4 : rec_ziggy*, align 8
        get_member
        %56 = load %55 : s32i, align 4
        %57 = call @printf(%53, %56) : s32i [all]
        %58 = get_global @printf : (s8i*, ...) -> s32i*
        %59 = get_global @.str.6 : s8i[14]*
        %60 = cast(array_to_ptrdecay) %59 : s8i*
        %61 = load %4 : rec_ziggy*, align 8
        get_member
        %63 = load %62 : s32i, align 4
        %64 = call @printf(%60, %63) : s32i [all]
        %65 = get_global @bolshevic : rec_ziggy*
        get_member
        store %66, %2, align 8
        %67 = get_global @printf : (s8i*, ...) -> s32i*
        %68 = get_global @.str.2 : s8i[18]*
        %69 = cast(array_to_ptrdecay) %68 : s8i*
        %70 = load %2 : s32i*, align 8
        %71 = load %70 : s32i, align 4
        %72 = call @printf(%69, %71) : s32i [all]
        %73 = const 0 : s32i
        store %73, %0
        %74 = load %0 : s32i
        return %74
}
