clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00164.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00164.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = ConstArray { ty: Array { element_type: Named("s8i"), size: 8 }, elts: Str("%d, %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = alloca s32i, "b", align 4
        %3 = alloca s32i, "c", align 4
        %4 = alloca s32i, "d", align 4
        %5 = alloca s32i, "e", align 4
        %6 = alloca s32i, "f", align 4
        %7 = alloca s32i, "x", align 4
        %8 = alloca s32i, "y", align 4
        %9 = const 0 : s32i
        store %9, %0
        %10 = const 12 : s32i
        store %10, %1, align 4
        %11 = const 34 : s32i
        store %11, %2, align 4
        %12 = const 56 : s32i
        store %12, %3, align 4
        %13 = const 78 : s32i
        store %13, %4, align 4
        %14 = const 0 : s32i
        store %14, %5, align 4
        %15 = const 1 : s32i
        store %15, %6, align 4
        %16 = get_global @printf : (s8i*, ...) -> s32i*
        %17 = get_global @.str : s8i[4]*
        %18 = cast(array_to_ptrdecay) %17 : s8i*
        %19 = load %3 : s32i, align 4
        %20 = load %4 : s32i, align 4
        %21 = add %19, %20 : s32i [nsw]
        %22 = call @printf(%18, %21) : s32i [all]
        %23 = get_global @printf : (s8i*, ...) -> s32i*
        %24 = get_global @.str : s8i[4]*
        %25 = cast(array_to_ptrdecay) %24 : s8i*
        %26 = load %3 : s32i, align 4
        %27 = load %4 : s32i, align 4
        %28 = add %26, %27 : s32i [nsw]
        store %28, %8, align 4
        %29 = call @printf(%25, %28) : s32i [all]
        %30 = get_global @printf : (s8i*, ...) -> s32i*
        %31 = get_global @.str : s8i[4]*
        %32 = cast(array_to_ptrdecay) %31 : s8i*
        %33 = load %5 : s32i, align 4
        %34 = cast(int_to_bool) %33 : bool
        %35 = ternary %34 ? { : bool
                %188 = const true : bool
                yield %188
        } : {
                %182 = load %5 : s32i, align 4
                %183 = cast(int_to_bool) %182 : bool
                %184 = ternary %183 ? { : bool
                        %186 = load %6 : s32i, align 4
                        %187 = cast(int_to_bool) %186 : bool
                        yield %187
                } : {
                        %185 = const false : bool
                        yield %185
                }
                yield %184
        }
        %36 = cast(bool_to_int) %35 : s32i
        %37 = call @printf(%32, %36) : s32i [all]
        %38 = get_global @printf : (s8i*, ...) -> s32i*
        %39 = get_global @.str : s8i[4]*
        %40 = cast(array_to_ptrdecay) %39 : s8i*
        %41 = load %5 : s32i, align 4
        %42 = cast(int_to_bool) %41 : bool
        %43 = ternary %42 ? { : bool
                %181 = const true : bool
                yield %181
        } : {
                %175 = load %6 : s32i, align 4
                %176 = cast(int_to_bool) %175 : bool
                %177 = ternary %176 ? { : bool
                        %179 = load %6 : s32i, align 4
                        %180 = cast(int_to_bool) %179 : bool
                        yield %180
                } : {
                        %178 = const false : bool
                        yield %178
                }
                yield %177
        }
        %44 = cast(bool_to_int) %43 : s32i
        %45 = call @printf(%40, %44) : s32i [all]
        %46 = get_global @printf : (s8i*, ...) -> s32i*
        %47 = get_global @.str : s8i[4]*
        %48 = cast(array_to_ptrdecay) %47 : s8i*
        %49 = load %5 : s32i, align 4
        %50 = cast(int_to_bool) %49 : bool
        %51 = ternary %50 ? { : bool
                %173 = load %5 : s32i, align 4
                %174 = cast(int_to_bool) %173 : bool
                yield %174
        } : {
                %172 = const false : bool
                yield %172
        }
        %52 = ternary %51 ? { : bool
                %171 = const true : bool
                yield %171
        } : {
                %169 = load %6 : s32i, align 4
                %170 = cast(int_to_bool) %169 : bool
                yield %170
        }
        %53 = cast(bool_to_int) %52 : s32i
        %54 = call @printf(%48, %53) : s32i [all]
        %55 = get_global @printf : (s8i*, ...) -> s32i*
        %56 = get_global @.str : s8i[4]*
        %57 = cast(array_to_ptrdecay) %56 : s8i*
        %58 = load %5 : s32i, align 4
        %59 = cast(int_to_bool) %58 : bool
        %60 = ternary %59 ? { : bool
                %167 = load %6 : s32i, align 4
                %168 = cast(int_to_bool) %167 : bool
                yield %168
        } : {
                %166 = const false : bool
                yield %166
        }
        %61 = ternary %60 ? { : bool
                %165 = const true : bool
                yield %165
        } : {
                %163 = load %6 : s32i, align 4
                %164 = cast(int_to_bool) %163 : bool
                yield %164
        }
        %62 = cast(bool_to_int) %61 : s32i
        %63 = call @printf(%57, %62) : s32i [all]
        %64 = get_global @printf : (s8i*, ...) -> s32i*
        %65 = get_global @.str : s8i[4]*
        %66 = cast(array_to_ptrdecay) %65 : s8i*
        %67 = load %1 : s32i, align 4
        %68 = cast(int_to_bool) %67 : bool
        %69 = ternary %68 ? { : bool
                %159 = load %6 : s32i, align 4
                %160 = load %6 : s32i, align 4
                or
                %162 = cast(int_to_bool) %161 : bool
                yield %162
        } : {
                %158 = const false : bool
                yield %158
        }
        %70 = cast(bool_to_int) %69 : s32i
        %71 = call @printf(%66, %70) : s32i [all]
        %72 = get_global @printf : (s8i*, ...) -> s32i*
        %73 = get_global @.str : s8i[4]*
        %74 = cast(array_to_ptrdecay) %73 : s8i*
        %75 = load %1 : s32i, align 4
        %76 = load %2 : s32i, align 4
        %77 = load %3 : s32i, align 4
        %78 = load %4 : s32i, align 4
        and
        xor
        or
        %82 = call @printf(%74, %81) : s32i [all]
        %83 = get_global @printf : (s8i*, ...) -> s32i*
        %84 = get_global @.str.1 : s8i[8]*
        %85 = cast(array_to_ptrdecay) %84 : s8i*
        %86 = load %1 : s32i, align 4
        %87 = load %1 : s32i, align 4
        cmp
        %89 = cast(bool_to_int) %88 : s32i
        %90 = load %1 : s32i, align 4
        %91 = load %2 : s32i, align 4
        cmp
        %93 = cast(bool_to_int) %92 : s32i
        %94 = call @printf(%85, %89, %93) : s32i [all]
        %95 = get_global @printf : (s8i*, ...) -> s32i*
        %96 = get_global @.str.1 : s8i[8]*
        %97 = cast(array_to_ptrdecay) %96 : s8i*
        %98 = load %1 : s32i, align 4
        %99 = load %1 : s32i, align 4
        cmp
        %101 = cast(bool_to_int) %100 : s32i
        %102 = load %1 : s32i, align 4
        %103 = load %2 : s32i, align 4
        cmp
        %105 = cast(bool_to_int) %104 : s32i
        %106 = call @printf(%97, %101, %105) : s32i [all]
        %107 = get_global @printf : (s8i*, ...) -> s32i*
        %108 = get_global @.str : s8i[4]*
        %109 = cast(array_to_ptrdecay) %108 : s8i*
        %110 = load %1 : s32i, align 4
        %111 = load %2 : s32i, align 4
        cmp
        %113 = ternary %112 ? { : bool
                %155 = load %3 : s32i, align 4
                %156 = load %4 : s32i, align 4
                cmp
                yield %157
        } : {
                %154 = const false : bool
                yield %154
        }
        %114 = cast(bool_to_int) %113 : s32i
        %115 = call @printf(%109, %114) : s32i [all]
        %116 = get_global @printf : (s8i*, ...) -> s32i*
        %117 = get_global @.str : s8i[4]*
        %118 = cast(array_to_ptrdecay) %117 : s8i*
        %119 = load %1 : s32i, align 4
        %120 = load %2 : s32i, align 4
        %121 = load %3 : s32i, align 4
        mul
        %123 = load %6 : s32i, align 4
        div
        %125 = add %119, %124 : s32i [nsw]
        %126 = call @printf(%118, %125) : s32i [all]
        %127 = get_global @printf : (s8i*, ...) -> s32i*
        %128 = get_global @.str : s8i[4]*
        %129 = cast(array_to_ptrdecay) %128 : s8i*
        %130 = load %1 : s32i, align 4
        %131 = load %2 : s32i, align 4
        %132 = load %3 : s32i, align 4
        mul
        %134 = load %6 : s32i, align 4
        div
        %136 = add %130, %135 : s32i [nsw]
        %137 = call @printf(%129, %136) : s32i [all]
        %138 = get_global @printf : (s8i*, ...) -> s32i*
        %139 = get_global @.str : s8i[4]*
        %140 = cast(array_to_ptrdecay) %139 : s8i*
        %141 = const 4 : s32i
        %142 = const 4 : s32i
        shift
        %144 = call @printf(%140, %143) : s32i [all]
        %145 = get_global @printf : (s8i*, ...) -> s32i*
        %146 = get_global @.str : s8i[4]*
        %147 = cast(array_to_ptrdecay) %146 : s8i*
        %148 = const 64 : s32i
        %149 = const 4 : s32i
        shift
        %151 = call @printf(%147, %150) : s32i [all]
        %152 = const 0 : s32i
        store %152, %0
        %153 = load %0 : s32i
        return %153
}
