clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00166.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00166.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = alloca s32i, "b", align 4
        %3 = alloca s32i, "c", align 4
        %4 = alloca s32i, "d", align 4
        %5 = const 0 : s32i
        store %5, %0
        %6 = const 24680 : s32i
        store %6, %1, align 4
        %7 = const 342391 : s32i
        store %7, %2, align 4
        %8 = const 2386092 : s32i
        store %8, %3, align 4
        %9 = const 2386092 : s32i
        store %9, %4, align 4
        %10 = get_global @printf : (s8i*, ...) -> s32i*
        %11 = get_global @.str : s8i[4]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = load %1 : s32i, align 4
        %14 = call @printf(%12, %13) : s32i [all]
        %15 = get_global @printf : (s8i*, ...) -> s32i*
        %16 = get_global @.str : s8i[4]*
        %17 = cast(array_to_ptrdecay) %16 : s8i*
        %18 = load %2 : s32i, align 4
        %19 = call @printf(%17, %18) : s32i [all]
        %20 = get_global @printf : (s8i*, ...) -> s32i*
        %21 = get_global @.str : s8i[4]*
        %22 = cast(array_to_ptrdecay) %21 : s8i*
        %23 = load %3 : s32i, align 4
        %24 = call @printf(%22, %23) : s32i [all]
        %25 = get_global @printf : (s8i*, ...) -> s32i*
        %26 = get_global @.str : s8i[4]*
        %27 = cast(array_to_ptrdecay) %26 : s8i*
        %28 = load %4 : s32i, align 4
        %29 = call @printf(%27, %28) : s32i [all]
        %30 = const 0 : s32i
        store %30, %0
        %31 = load %0 : s32i
        return %31
}
