clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00168.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00168.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn factorial(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %17 = alloca s32i, "i", align 4
        %18 = alloca s32i, "__retval", align 4
        store %arg0, %17
        scope {
            %20 = load %17 : s32i, align 4
            %21 = const 2 : s32i
            %22 = cmp lt %20, %21 : bool
            if %22 {
                %30 = load %17 : s32i, align 4
                store %30, %18
                %31 = load %18 : s32i
                return %31
            } else {
                %23 = load %17 : s32i, align 4
                %24 = load %17 : s32i, align 4
                %25 = const 1 : s32i
                %26 = sub %24, %25 : s32i [nsw]
                %27 = call @factorial(%26) : s32i [all]
                %28 = mul %23, %27 : s32i [nsw]
                store %28, %18
                %29 = load %18 : s32i
                return %29
            }
            yield
        }
        %19 = load %18 : s32i
        return %19
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "Count", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %5 = const 1 : s32i
        store %5, %1, align 4
        for cond: {
            %14 = load %1 : s32i, align 4
            %15 = const 10 : s32i
            %16 = cmp le %14, %15 : bool
            condition %16
        } step: {
            %6 = load %1 : s32i, align 4
            %7 = inc %6 : s32i [nsw]
            store %7, %1, align 4
            yield
        } do {
            %8 = get_global @printf : ((s8i*, ...) -> s32i)*
            %9 = get_global @.str : s8i[4]*
            %10 = cast(array_to_ptrdecay) %9 : s8i*
            %11 = load %1 : s32i, align 4
            %12 = call @factorial(%11) : s32i [all]
            %13 = call @printf(%10, %12) : s32i [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
